@@ -1,6 +1,7 @@
 package tn.cita.app.resource;
 
-import java.util.Optional;
+import java.util.NoSuchElementException;
+import java.util.Objects;
 
 import javax.validation.ConstraintViolationException;
 
@@ -13,120 +14,78 @@ import org.springframework.security.authentication.DisabledException;
 import org.springframework.validation.BindException;
 import org.springframework.validation.FieldError;
 import org.springframework.web.bind.MethodArgumentNotValidException;
+import org.springframework.web.bind.annotation.ControllerAdvice;
 import org.springframework.web.bind.annotation.ExceptionHandler;
-import org.springframework.web.bind.annotation.RestControllerAdvice;
-import org.springframework.web.context.request.WebRequest;
 
-import io.jsonwebtoken.ExpiredJwtException;
-import io.jsonwebtoken.SignatureException;
 import lombok.extern.slf4j.Slf4j;
-import tn.cita.app.dto.response.api.ApiPayloadResponse;
 import tn.cita.app.exception.payload.ExceptionMsg;
-import tn.cita.app.exception.wrapper.AccessTokenExpiredException;
-import tn.cita.app.exception.wrapper.CategoryNotFoundException;
-import tn.cita.app.exception.wrapper.CredentialNotFoundException;
-import tn.cita.app.exception.wrapper.CustomerNotFoundException;
-import tn.cita.app.exception.wrapper.EmployeeNotFoundException;
-import tn.cita.app.exception.wrapper.ExpiredVerificationTokenException;
-import tn.cita.app.exception.wrapper.FavouriteNotFoundException;
-import tn.cita.app.exception.wrapper.IllegalCredentialsException;
-import tn.cita.app.exception.wrapper.IllegalRegistrationRoleTypeException;
-import tn.cita.app.exception.wrapper.IllegalUserDetailsStateException;
-import tn.cita.app.exception.wrapper.LocationNotFoundException;
-import tn.cita.app.exception.wrapper.MailNotificationNotProcessedException;
-import tn.cita.app.exception.wrapper.OrderedDetailNotFoundException;
-import tn.cita.app.exception.wrapper.PasswordNotMatchException;
-import tn.cita.app.exception.wrapper.RatingNotFoundException;
-import tn.cita.app.exception.wrapper.ReservationNotFoundException;
-import tn.cita.app.exception.wrapper.SaloonNotFoundException;
-import tn.cita.app.exception.wrapper.SaloonTagNotFoundException;
-import tn.cita.app.exception.wrapper.ServiceDetailNotFoundException;
-import tn.cita.app.exception.wrapper.TagNotFoundException;
-import tn.cita.app.exception.wrapper.UsernameAlreadyExistsException;
-import tn.cita.app.exception.wrapper.VerificationTokenNotFoundException;
+import tn.cita.app.exception.wrapper.ActuatorHealthException;
+import tn.cita.app.exception.wrapper.BusinessException;
+import tn.cita.app.model.dto.response.api.ApiResponse;
 
-@RestControllerAdvice
+@ControllerAdvice
 @Slf4j
 public class ApiExceptionHandler {
 	
 	@ExceptionHandler(value = {
+		BindException.class,
 		MethodArgumentNotValidException.class,
 		HttpMessageNotReadableException.class,
 		ConstraintViolationException.class,
 	})
-	public <T extends BindException> ResponseEntity<ApiPayloadResponse<ExceptionMsg>> handleValidationException(final T e, 
-			final WebRequest webRequest) {
+	public <T extends BindException> ResponseEntity<ApiResponse<ExceptionMsg>> handleValidationException(final T e) {
 		
-		log.info("**ApiExceptionHandler controller; ExceptionMsg; handle validation exception*\n");
+		log.info("** Handle validation exception.. *\n");
 		
-		final var fieldError = Optional
-				.ofNullable(e.getBindingResult().getFieldError())
-				.orElseGet(() -> new FieldError(null, null, "Validation error happened, check again"));
+		final var fieldError = Objects.requireNonNullElseGet(e.getBindingResult().getFieldError(), 
+				() -> new FieldError(null, null, "Validation error happened, check again"));
 		
 		final var httpStatus = HttpStatus.BAD_REQUEST;
-		final var exceptionMsg = ExceptionMsg.builder()
-				.errorMsg(String.format("*%s!**", fieldError.getDefaultMessage()))
-				.build();
-		final var apiPayloadResponse = new ApiPayloadResponse<>(1, httpStatus, false, exceptionMsg);
+		final var exceptionMsg = new ExceptionMsg("*%s!**".formatted(fieldError.getDefaultMessage()));
+		final var apiResponse = new ApiResponse<>(1, httpStatus, false, exceptionMsg);
 		
 		return ResponseEntity.status(httpStatus)
 				.contentType(MediaType.APPLICATION_JSON)
-				.body(apiPayloadResponse);
+				.body(apiResponse);
 	}
 	
 	@ExceptionHandler(value = {
+		BusinessException.class,
+		NullPointerException.class,
+		NoSuchElementException.class,
 		BadCredentialsException.class,
-		IllegalCredentialsException.class,
 		IllegalStateException.class,
-		CategoryNotFoundException.class,
-		CredentialNotFoundException.class,
-		CustomerNotFoundException.class,
-		EmployeeNotFoundException.class,
-		FavouriteNotFoundException.class,
-		LocationNotFoundException.class,
-		OrderedDetailNotFoundException.class,
-		RatingNotFoundException.class,
-		ReservationNotFoundException.class,
-		SaloonNotFoundException.class,
-		SaloonTagNotFoundException.class,
-		ServiceDetailNotFoundException.class,
-		TagNotFoundException.class,
-		VerificationTokenNotFoundException.class,
-		IllegalRegistrationRoleTypeException.class,
-		PasswordNotMatchException.class,
-		MailNotificationNotProcessedException.class,
-		ExpiredVerificationTokenException.class,
 		DisabledException.class,
-		IllegalUserDetailsStateException.class,
-		UsernameAlreadyExistsException.class,
-		AccessTokenExpiredException.class,
-		SignatureException.class,
-		ExpiredJwtException.class,
 		NumberFormatException.class,
+		// UnauthorizedUserException.class, // already works for filter using resolver
+		ActuatorHealthException.class,
 	})
-	public <T extends RuntimeException> ResponseEntity<ApiPayloadResponse<ExceptionMsg>> handleApiRequestException(final T e, 
-			final WebRequest webRequest) {
-		log.info("**ApiExceptionHandler controller; ExceptionMsg; handle API request*\n");
+	public <T extends RuntimeException> ResponseEntity<ApiResponse<ExceptionMsg>> handleApiRequestException(final T e) {
+		log.info("** Handle API request custom exception.. *\n");
 		
 		final var httpStatus = HttpStatus.BAD_REQUEST;
-		final var exceptionMsg = ExceptionMsg.builder()
-				.errorMsg(String.format("#### %s! ####", e.getMessage()))
-				.build();
-		final var apiPayloadResponse = new ApiPayloadResponse<>(1, httpStatus, false, exceptionMsg);
+		final var exceptionMsg = new ExceptionMsg("#### %s! ####".formatted(e.getMessage()));
+		final var apiResponse = new ApiResponse<>(1, httpStatus, false, exceptionMsg);
 		
 		return ResponseEntity.status(httpStatus)
 				.contentType(MediaType.APPLICATION_JSON)
-				.body(apiPayloadResponse);
+				.body(apiResponse);
 	}
 	
-	
+	@ExceptionHandler
+	public ResponseEntity<ApiResponse<ExceptionMsg>> handleGeneralException(final Exception e) {
+		log.info("** Handle API request custom exception.. *\n");
+		
+		final var httpStatus = HttpStatus.BAD_REQUEST;
+		final var exceptionMsg = new ExceptionMsg("#### %s! ####".formatted(e.getMessage()));
+		final var apiResponse = new ApiResponse<>(1, httpStatus, false, exceptionMsg);
+		
+		return ResponseEntity.status(httpStatus)
+				.contentType(MediaType.APPLICATION_JSON)
+				.body(apiResponse);
+	}
 	
 }
-
-
-
-
-
 
 
 
